RESOLVED FIXED 141744
[iOS] Fix inefficiencies in ResourceResponse::platformLazyInit()
https://bugs.webkit.org/show_bug.cgi?id=141744
Summary [iOS] Fix inefficiencies in ResourceResponse::platformLazyInit()
Chris Dumez
Reported 2015-02-17 21:26:48 PST
Fix inefficiencies in ResourceResponse::platformLazyInit(), similarly to what was already done for Mac in <http://trac.webkit.org/changeset/174717>.
Attachments
Patch (5.08 KB, patch)
2015-02-17 21:38 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-02-17 21:38:57 PST
Chris Dumez
Comment 2 2015-02-19 10:37:29 PST
ping review?
Alexey Proskuryakov
Comment 3 2015-02-19 10:51:27 PST
Comment on attachment 246801 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246801&action=review > Source/WebCore/platform/network/cf/ResourceResponseCFNet.cpp:107 > - if (m_initLevel < AllFields) { > + if (m_initLevel < AllFields && initLevel == AllFields) { Whoa. Did this regress recently?
Andreas Kling
Comment 4 2015-02-19 10:54:49 PST
@Alexey: I know you have strong feelings about making changes to the iOS resource loader code at this point in time. Care to comment on this change?
Andreas Kling
Comment 5 2015-02-19 10:55:25 PST
(In reply to comment #4) > @Alexey: I know you have strong feelings about making changes to the iOS > resource loader code at this point in time. Care to comment on this change? Oh oops, this comment landed just after you commented! Thanks :-)
Chris Dumez
Comment 6 2015-02-19 10:59:52 PST
Comment on attachment 246801 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246801&action=review >> Source/WebCore/platform/network/cf/ResourceResponseCFNet.cpp:107 >> + if (m_initLevel < AllFields && initLevel == AllFields) { > > Whoa. Did this regress recently? Yes, I think this regressed in <https://trac.webkit.org/r173272>.
WebKit Commit Bot
Comment 7 2015-02-19 11:43:19 PST
Comment on attachment 246801 [details] Patch Clearing flags on attachment: 246801 Committed r180353: <http://trac.webkit.org/changeset/180353>
WebKit Commit Bot
Comment 8 2015-02-19 11:43:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.